generate api models
