# internal/controller/httpHandler/models/create_schedule_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CreateScheduleResponse create schedule response
+//
+// swagger:model create_schedule_response
+type CreateScheduleResponse struct {
+
+	// id
+	ID int64 `json:"id,omitempty"`
+}
+
+// Validate validates this create schedule response
+func (m *CreateScheduleResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this create schedule response based on context it is used
+func (m *CreateScheduleResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CreateScheduleResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CreateScheduleResponse) UnmarshalBinary(b []byte) error {
+	var res CreateScheduleResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
