# models/http_handler_error_response.go
@@ -1,50 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// HTTPHandlerErrorResponse http handler error response
-//
-// swagger:model httpHandler.errorResponse
-type HTTPHandlerErrorResponse struct {
-
-	// error
-	Error string `json:"error,omitempty"`
-}
-
-// Validate validates this http handler error response
-func (m *HTTPHandlerErrorResponse) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this http handler error response based on context it is used
-func (m *HTTPHandlerErrorResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *HTTPHandlerErrorResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *HTTPHandlerErrorResponse) UnmarshalBinary(b []byte) error {
-	var res HTTPHandlerErrorResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
